--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/formularioDB?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/formularioDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-colitas.ca1nqarzefhx.us-east-2.rds.amazonaws.com:3306/formularioDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=mysql1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
