--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/formularioDB?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://mysql-colitas.ca1nqarzefhx.us-east-2.rds.amazonaws.com:3306/formularioDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-colitas.ca1nqarzefhx.us-east-2.rds.amazonaws.com:3306/formularioDB
 spring.datasource.username=root
 spring.datasource.password=mysql1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
